---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "put 1 : 1 :  : "
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..15): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..14): []
        Put@(FileId(1), 0..14): newline
          Literal@(FileId(1), 4..5): Integer(1)
          Literal@(FileId(1), 8..9): Integer(1)
error at (FileId(1), 13..14): unexpected token
| error for (FileId(1), 13..14): expected expression, but found `:`

